--- a/project/example3js.html
+++ b/project/example3js.html
@@ -28,7 +28,7 @@
         document.body.appendChild(renderer.domElement);
 
         var geometry = new THREE.BoxGeometry(1, 1, 1);
-        var material = new THREE.MeshBasicMaterial({ color: 0x00ffff });
+        var material = new THREE.MeshBasicMaterial({ color: 0x00ffff, wireframe: true });
         var cube = new THREE.Mesh(geometry, material);
         scene.add(cube);
 
@@ -37,8 +37,8 @@
         var animate = function () {
             requestAnimationFrame(animate);
 
-            cube.rotation.x += 0.05;
-            cube.rotation.y += 0.05;
+            cube.rotation.x += 0.01;
+            cube.rotation.y += 0.01;
 
             renderer.render(scene, camera);
         };
