--- a/project/soundDsp.html
+++ b/project/soundDsp.html
@@ -48,7 +48,7 @@
                 src.connect(analyser);
                 analyser.connect(context.destination);
 
-                analyser.fftSize = 256;
+                analyser.fftSize = 4096;
 
                 var bufferLength = analyser.frequencyBinCount;
                 console.log(bufferLength);
@@ -75,9 +75,9 @@
                     for (var i = 0; i < bufferLength; i++) {
                         barHeight = dataArray[i];
 
-                        var r = barHeight + (25 * (i / bufferLength));
-                        var g = 250 * (i / bufferLength);
-                        var b = 50;
+                        var r = 2;
+                        var g = 2 * (i / bufferLength);
+                        var b = barHeight + (1 * (i / bufferLength));
 
                         ctx.fillStyle = "rgb(" + r + "," + g + "," + b + ")";
                         ctx.fillRect(x, HEIGHT - barHeight, barWidth, barHeight);
